Refactoring, move to JDK 23